--- a/index.html
+++ b/index.html
@@ -173,44 +173,83 @@
       const toggle = document.getElementById("menuToggle");
       if (!menu.contains(event.target) && !toggle.contains(event.target)) {
         if (menu.classList.contains("active")) {
-          menu.classList.remove("active");
-          toggle.textContent = "☰";
-          toggle.classList.remove("open");
-          document.body.style.overflow = "auto";
-        }
+<script>
+window.addEventListener("DOMContentLoaded", () => {
+  const slider = document.querySelector(".ad-slider");
+  const slides = slider.querySelectorAll(".ad-slide");
+  const slideWidth = slides[0].offsetWidth + 20;
+  const dotsContainer = document.getElementById("sliderDots");
+  let index = 0;
+  let autoScrollInterval;
+  let isHovered = false;
+
+  // Create Dots
+  slides.forEach((_, i) => {
+    const dot = document.createElement("div");
+    dot.classList.add("slider-dot");
+    if (i === 0) dot.classList.add("active");
+    dot.addEventListener("click", () => {
+      index = i;
+      updateSlider();
+      resetAutoScroll();
+    });
+    dotsContainer.appendChild(dot);
+  });
+
+  const dots = dotsContainer.querySelectorAll(".slider-dot");
+
+  // Update slider and dots
+  function updateSlider() {
+    slider.scrollTo({ left: slideWidth * index, behavior: "smooth" });
+    dots.forEach(dot => dot.classList.remove("active"));
+    dots[index].classList.add("active");
+  }
+
+  // Auto scroll function
+  function startAutoScroll() {
+    autoScrollInterval = setInterval(() => {
+      if (!isHovered) {
+        index = (index + 1) % slides.length;
+        updateSlider();
       }
-    });
+    }, 5000);
+  }
 
-    // Swipe gestures for opening/closing drawer
-    let startX = 0, endX = 0;
-    const menu = document.getElementById("dropdown-menu");
-    const toggle = document.getElementById("menuToggle");
+  function resetAutoScroll() {
+    clearInterval(autoScrollInterval);
+    startAutoScroll();
+  }
 
-    menu.addEventListener("touchstart", (e) => startX = e.changedTouches[0].screenX);
-    menu.addEventListener("touchend", (e) => {
-      endX = e.changedTouches[0].screenX;
-      if (endX - startX > 50) {
-        menu.classList.remove("active");
-        toggle.textContent = "☰";
-        toggle.classList.remove("open");
-        document.body.style.overflow = "auto";
-      }
-    });
+  // Pause/resume on hover
+  slider.addEventListener("mouseenter", () => isHovered = true);
+  slider.addEventListener("mouseleave", () => isHovered = false);
 
-    document.addEventListener("touchstart", (e) => {
-      startX = e.touches[0].clientX > window.innerWidth - 20 ? e.touches[0].clientX : 0;
-    });
+  startAutoScroll();
 
-    document.addEventListener("touchend", (e) => {
-      if (!startX) return;
-      endX = e.changedTouches[0].clientX;
-      if (startX - endX > 50) {
-        menu.classList.add("active");
-        toggle.textContent = "✖";
-        toggle.classList.add("open");
-        document.body.style.overflow = "hidden";
-      }
-    });
-  </script>
+  // Touch/swipe gesture support
+  let touchStartX = 0;
+
+  slider.addEventListener("touchstart", (e) => {
+    touchStartX = e.touches[0].clientX;
+  });
+
+  slider.addEventListener("touchend", (e) => {
+    const touchEndX = e.changedTouches[0].clientX;
+    const diff = touchStartX - touchEndX;
+
+    if (diff > 50) {
+      // Swipe left
+      index = (index + 1) % slides.length;
+      updateSlider();
+      resetAutoScroll();
+    } else if (diff < -50) {
+      // Swipe right
+      index = (index - 1 + slides.length) % slides.length;
+      updateSlider();
+      resetAutoScroll();
+    }
+  });
+});
+</script>
 </body>
 </html>
