--- a/register.html
+++ b/register.html
@@ -2,367 +2,108 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-Frame-Options" content="DENY" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>King's Cut Barbershop | Personal Barber</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Loyalty Points Registration</title>
   <style>
     * {
-      margin: 0;
-      padding: 0;
+      margin: 0; padding: 0;
       box-sizing: border-box;
-      font-family: sans-serif;
+      font-family: 'Segoe UI', sans-serif;
+      -webkit-tap-highlight-color: transparent;
     }
 
     body {
-      background: #f4f4f4;
-      color: #222;
-      overflow-x: hidden;
-    }
-
-    header {
-      background: #111;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-
-    nav {
+      background: #f5f5f5;
+      color: #333;
       display: flex;
-      overflow-x: auto;
-      background: #222;
-    }
-
-    nav a {
-      flex: 1 0 auto;
-      padding: 15px;
-      color: #fff;
-      text-decoration: none;
-      text-align: center;
-      white-space: nowrap;
-    }
-
-    nav a:hover {
-      background: #444;
-    }
-
-    .hero {
+      flex-direction: column;
+      align-items: center;
       padding: 40px 20px;
-      text-align: center;
-      background: linear-gradient(#222, #333);
-      color: white;
     }
 
-    .hero h1 {
-      font-size: 2em;
-      margin-bottom: 10px;
-    }
-
-    .hero p {
-      font-size: 1.1em;
-    }
-
-    .ads {
-      position: relative;
-      overflow: hidden;
-      max-width: 100%;
-    }
-
-    .ads-container {
-      display: flex;
-      transition: transform 0.5s ease-in-out;
-      width: 300%;
-    }
-
-    .ad-slide {
-      min-width: 100%;
-      padding: 40px 20px;
-      background: #ddd;
-      text-align: center;
-    }
-
-    .dots {
-      display: flex;
-      justify-content: center;
-      margin: 10px 0;
-    }
-
-    .dot {
-      height: 12px;
-      width: 12px;
-      margin: 0 5px;
-      background-color: #bbb;
-      border-radius: 50%;
-      display: inline-block;
-      cursor: pointer;
-    }
-
-    .dot.active {
-      background-color: #333;
-    }
-
-    .register {
-      padding: 30px 20px;
-      background: #fff;
-    }
-
-    .register h2 {
+    h1 {
       margin-bottom: 20px;
+      color: #1e1e2f;
     }
 
-    .register input {
+    form {
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      width: 100%;
+      max-width: 400px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 6px;
+      font-weight: bold;
+      font-size: 0.95em;
+    }
+
+    input {
       width: 100%;
       padding: 12px;
-      margin: 10px 0;
+      margin-bottom: 20px;
       border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-
-    .register button {
-      padding: 12px;
-      width: 100%;
-      background: #222;
-      color: white;
-      border: none;
-      border-radius: 5px;
+      border-radius: 8px;
       font-size: 1em;
     }
 
-    .privacy-popup {
-      position: fixed;
-      bottom: 10px;
-      left: 10px;
-      right: 10px;
-      background: #222;
+    button {
+      width: 100%;
+      padding: 12px;
+      background: #8e2de2;
       color: white;
-      padding: 15px;
-      border-radius: 8px;
-      z-index: 999;
-      display: none;
-    }
-
-    .privacy-popup.show {
-      display: block;
-    }
-
-    .privacy-popup button {
-      background: #fff;
-      color: #222;
+      font-size: 1em;
       border: none;
-      padding: 5px 10px;
-      margin-left: 10px;
-      border-radius: 5px;
+      border-radius: 8px;
+      font-weight: bold;
       cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background: #6c1bb8;
+    }
+
+    .login-link {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 0.9em;
+    }
+
+    .login-link a {
+      color: #8e2de2;
+      text-decoration: none;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>King's Cut Barbershop</h1>
-    <p>Your Personal Barber, Anytime</p>
-  </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="#register">Promos</a>
-    <a href="#" onclick="handleLoyaltyClick()">Loyalty</a>
-    <a href="#contact">Contact</a>
-  </nav>
+  <h1>Join Our Loyalty Program</h1>
 
-  <section class="hero" id="hero">
-    <h1>Fresh Cuts Delivered</h1>
-    <p>We come to you — mobile barber services at your convenience.</p>
-  </section>
+  <form action="submit-loyalty.php" method="POST">
+    <label for="name">Full Name</label>
+    <input type="text" id="name" name="name" required />
 
-  <!-- Registration Form -->
-  <section class="register" id="registerSection">
-    <h2>Loyalty Points Registration</h2>
-    <form id="loyaltyForm">
-      <input type="text" id="name" placeholder="Your Full Name" required />
-      <input type="tel" id="phone" placeholder="Phone Number" required />
-      <input type="email" id="email" placeholder="Email Address (optional)" />
-      <input type="password" id="regPassword" placeholder="Set Loyalty Password" required />
-      <button type="submit">Register</button>
-    </form>
-  </section>
+    <label for="phone">Phone Number</label>
+    <input type="tel" id="phone" name="phone" required pattern="[0-9]{10}" />
 
-  <!-- Ads Section -->
-  <section class="ads" id="adsSection" style="display: none;">
-    <div class="ads-container" id="adsContainer">
-      <div class="ad-slide">🔥 20% OFF First Cut</div>
-      <div class="ad-slide">💈 Refer a Friend = Free Trim</div>
-      <div class="ad-slide">🎉 Loyalty Points = Rewards</div>
-    </div>
-    <div class="dots">
-      <span class="dot active" onclick="setSlide(0)"></span>
-      <span class="dot" onclick="setSlide(1)"></span>
-      <span class="dot" onclick="setSlide(2)"></span>
-    </div>
-  </section>
+    <label for="email">Email Address</label>
+    <input type="email" id="email" name="email" required />
 
-  <!-- Privacy Popup -->
-  <div class="privacy-popup" id="privacyPopup">
-    We use cookies to improve your experience.
-    <button onclick="acceptPrivacy()">Accept</button>
+    <label for="password">Create Password</label>
+    <input type="password" id="password" name="password" required minlength="6" />
+
+    <button type="submit">Register & Earn Points</button>
+  </form>
+
+  <div class="login-link">
+    Already registered? <a href="login.html">Sign in</a>
   </div>
 
-  <!-- Password Prompt Modal -->
-  <div id="passwordModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:1000; align-items:center; justify-content:center;">
-    <div style="background:white; padding:20px; border-radius:10px; width:90%; max-width:300px; text-align:center;">
-      <h3>Enter Loyalty Password</h3>
-      <input type="password" id="loyaltyPassword" placeholder="Password" style="width:100%; padding:10px; margin:10px 0;" />
-      <div style="display:flex; justify-content:space-between; gap:10px;">
-        <button onclick="checkPassword()" style="flex:1; padding:10px; background:#222; color:white; border:none; border-radius:5px;">Submit</button>
-        <button onclick="closePasswordModal()" style="flex:1; padding:10px; background:#bbb; border:none; border-radius:5px;">Cancel</button>
-      </div>
-      <p id="passwordError" style="color:red; font-size:0.9em; display:none; margin-top:10px;">Incorrect password. Try again.</p>
-      <p style="margin-top:10px;">
-        <a href="#" onclick="openRecoveryModal()" style="font-size:0.9em; color:#0066cc;">Forgot Password?</a>
-      </p>
-    </div>
-  </div>
-
-  <!-- Recovery Modal -->
-  <div id="recoveryModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:1001; align-items:center; justify-content:center;">
-    <div style="background:white; padding:20px; border-radius:10px; width:90%; max-width:300px; text-align:center;">
-      <h3>Recover Loyalty Password</h3>
-      <input type="email" id="recoveryEmail" placeholder="Enter your registered email" style="width:100%; padding:10px; margin:10px 0;" />
-      <div style="display:flex; justify-content:space-between; gap:10px;">
-        <button onclick="recoverPassword()" style="flex:1; padding:10px; background:#222; color:white; border:none; border-radius:5px;">Recover</button>
-        <button onclick="closeRecoveryModal()" style="flex:1; padding:10px; background:#bbb; border:none; border-radius:5px;">Cancel</button>
-      </div>
-      <p id="recoveryMsg" style="margin-top:10px; font-size:0.9em;"></p>
-    </div>
-  </div>
-
-  <script>
-    const form = document.getElementById("loyaltyForm");
-
-    form.addEventListener("submit", e => {
-      e.preventDefault();
-      const data = {
-        name: document.getElementById("name").value,
-        phone: document.getElementById("phone").value,
-        email: document.getElementById("email").value,
-        password: document.getElementById("regPassword").value
-      };
-
-      alert("Thank you! You are now registered.");
-      localStorage.setItem("registeredClient", "yes");
-      localStorage.setItem("loyaltyPassword", data.password);
-      form.reset();
-      document.getElementById("registerSection").style.display = "none";
-      document.getElementById("adsSection").style.display = "block";
-    });
-
-    if (localStorage.getItem("registeredClient") === "yes") {
-      document.getElementById("registerSection").style.display = "none";
-      document.getElementById("adsSection").style.display = "block";
-    }
-
-    let currentIndex = 0;
-    const totalSlides = 3;
-    const adsContainer = document.getElementById("adsContainer");
-    const dots = document.querySelectorAll(".dot");
-
-    function showSlide(index) {
-      adsContainer.style.transform = `translateX(-${index * 100}%)`;
-      dots.forEach(dot => dot.classList.remove("active"));
-      dots[index].classList.add("active");
-    }
-
-    function nextSlide() {
-      currentIndex = (currentIndex + 1) % totalSlides;
-      showSlide(currentIndex);
-    }
-
-    function setSlide(index) {
-      currentIndex = index;
-      showSlide(index);
-    }
-
-    setInterval(nextSlide, 5000);
-
-    function acceptPrivacy() {
-      document.getElementById("privacyPopup").classList.remove("show");
-      localStorage.setItem("acceptedPrivacy", "yes");
-    }
-
-    if (!localStorage.getItem("acceptedPrivacy")) {
-      document.getElementById("privacyPopup").classList.add("show");
-    }
-
-    const cookieName = "loyaltyAccess";
-
-    function setCookie(name, value, days) {
-      const d = new Date();
-      d.setTime(d.getTime() + (days * 24 * 60 * 60 * 1000));
-      document.cookie = `${name}=${value};expires=${d.toUTCString()};path=/`;
-    }
-
-    function getCookie(name) {
-      const value = `; ${document.cookie}`;
-      const parts = value.split(`; ${name}=`);
-      return parts.length === 2 ? parts.pop().split(';').shift() : "";
-    }
-
-    function handleLoyaltyClick() {
-      const hasAccess = getCookie(cookieName);
-      if (hasAccess === "true") {
-        scrollToRegister();
-      } else {
-        openPasswordModal();
-      }
-    }
-
-    function openPasswordModal() {
-      document.getElementById("passwordModal").style.display = "flex";
-      document.getElementById("loyaltyPassword").value = "";
-      document.getElementById("passwordError").style.display = "none";
-    }
-
-    function closePasswordModal() {
-      document.getElementById("passwordModal").style.display = "none";
-    }
-
-    function checkPassword() {
-      const input = document.getElementById("loyaltyPassword").value;
-      const saved = localStorage.getItem("loyaltyPassword");
-      if (input === saved) {
-        setCookie(cookieName, "true", 7);
-        closePasswordModal();
-        scrollToRegister();
-      } else {
-        document.getElementById("passwordError").style.display = "block";
-      }
-    }
-
-    function scrollToRegister() {
-      document.getElementById("registerSection").scrollIntoView({ behavior: "smooth" });
-    }
-
-    function openRecoveryModal() {
-      closePasswordModal();
-      document.getElementById("recoveryModal").style.display = "flex";
-      document.getElementById("recoveryEmail").value = "";
-      document.getElementById("recoveryMsg").textContent = "";
-    }
-
-    function closeRecoveryModal() {
-      document.getElementById("recoveryModal").style.display = "none";
-    }
-
-    function recoverPassword() {
-      const email = document.getElementById("recoveryEmail").value;
-      const saved = localStorage.getItem("loyaltyPassword");
-
-      if (!email) {
-        document.getElementById("recoveryMsg").textContent = "Please enter your email.";
-      } else if (saved) {
-        document.getElementById("recoveryMsg").textContent = "Your password is: " + saved;
-      } else {
-        document.getElementById("recoveryMsg").textContent = "No password found.";
-      }
-    }
-  </script>
 </body>
 </html>
